# async-inspect

./: .gitignore  Cargo.toml  README.md
async-inspect/: Cargo.toml
async-inspect/examples/: simple.rs
async-inspect/mir_dump/: debug_print.txt  simple.foo_1-{closure#0}.-------.coroutine_async_drop_expand.0.mir  simple.foo_1-{closure#0}.-------.coroutine_before.0.mir  simple.foo_1-{closure#0}.-------.coroutine_drop.0.mir  simple.foo_1-{closure#0}.-------.coroutine_drop_proxy_async.0.mir  simple.foo_1-{closure#0}.-------.coroutine_post-transform.0.mir  simple.foo_1-{closure#0}.-------.coroutine_pre-elab.0.mir  simple.foo_1-{closure#0}.-------.coroutine_resume.0.mir  simple.foo_3-{closure#0}.-------.coroutine_async_drop_expand.0.mir  simple.foo_3-{closure#0}.-------.coroutine_before.0.mir  simple.foo_3-{closure#0}.-------.coroutine_drop.0.mir  simple.foo_3-{closure#0}.-------.coroutine_drop_proxy_async.0.mir  simple.foo_3-{closure#0}.-------.coroutine_post-transform.0.mir  simple.foo_3-{closure#0}.-------.coroutine_pre-elab.0.mir  simple.foo_3-{closure#0}.-------.coroutine_resume.0.mir  simple.main-{closure#0}.-------.coroutine_async_drop_expand.0.mir  simple.main-{closure#0}.-------.coroutine_before.0.mir  simple.main-{closure#0}.-------.coroutine_drop.0.mir  simple.main-{closure#0}.-------.coroutine_drop_proxy_async.0.mir  simple.main-{closure#0}.-------.coroutine_post-transform.0.mir  simple.main-{closure#0}.-------.coroutine_pre-elab.0.mir  simple.main-{closure#0}.-------.coroutine_resume.0.mir
async-inspect/src/: debug_reader.rs  lib.rs
async_inspect_gdb/: Cargo.toml  async_inspect.py  pyproject.toml
async_inspect_gdb/src/: backend.rs  embassy_inspector.rs  lib.rs  scroll_view.rs
async_inspect_gdb/src/backend/: gdb_backend.rs
async_inspect_gdb/src/backend/gdb_backend/: gdb_ratatui_backend.rs
async_inspect_gdb/src/embassy_inspector/: dwarf_parser.rs  ui.rs
async_inspect_gdb/src/embassy_inspector/dwarf_parser/: async_fn.rs  future.rs  task_pool.rs
docs/: Architecture.md
dwarf_reader/: Cargo.toml
dwarf_reader/src/: lib.rs  main.rs  type_parser.rs
dwarf_test/: Cargo.toml
dwarf_test/src/: main.rs  type_parser.rs
embassy_inspect/: Architecture.md  Cargo.toml
embassy_inspect/src/: backend.rs  callback.rs  dwarf_parser.rs  lib.rs  model.rs  ui.rs
embassy_inspect/src/dwarf_parser/: future.rs  ty.rs
embassy_inspect/src/model/: async_fn.rs  future.rs  ty.rs
embassy_inspect/src/ui/: scroll_view.rs
gdb_backend/: Cargo.toml  README.md  async_inspect.py  embassy_inspect.py  inspect_embassy.py  pyproject.toml
gdb_backend/src/: backend.rs  callback.rs  lib.rs
inspect_embassy/: Cargo.toml
inspect_embassy/src/model/: task_pool.rs
probe_rs_backend/: Cargo.toml  README.md
probe_rs_backend/src/: common_options.rs  main.rs
test_crates/nrf52840/: Cargo.toml
test_crates/nrf52840-buttons/: Cargo.toml
test_crates/nrf52840-buttons/src/: main.rs
test_crates/nrf52840-demo/: Cargo.toml
test_crates/nrf52840-demo/src/: main.rs
test_crates/nrf52840-game/: Cargo.toml
test_crates/nrf52840-game/src/: main.rs
test_crates/nrf52840-join/: Cargo.toml
test_crates/nrf52840-join/src/: main.rs
test_crates/nrf52840-no-async/: Cargo.toml
test_crates/nrf52840-no-async/src/: main.rs
test_crates/nrf52840/src/: main.rs
test_crates/simple/: Cargo.toml
test_crates/simple/mir_dump/: simple.bar-{closure#0}.-------.coroutine_async_drop_expand.0.mir  simple.bar-{closure#0}.-------.coroutine_before.0.mir  simple.bar-{closure#0}.-------.coroutine_drop.0.mir  simple.bar-{closure#0}.-------.coroutine_drop_proxy_async.0.mir  simple.bar-{closure#0}.-------.coroutine_post-transform.0.mir  simple.bar-{closure#0}.-------.coroutine_pre-elab.0.mir  (+8 more)
(+1 files in other folders)
