[package]
name = "async_inspect_gdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "async_inspect_gdb"
crate-type = ["cdylib"]

[dependencies]
log = "0.4.27"
pyo3 = "0.25.0"
pyo3-log = "0.12.4"
ratatui = { version = "0.29.0", default-features = false }
termion = "4.0.5"
