[package]
name = "async_inspect_gdb"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "async_inspect_gdb"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.98"
log = "0.4.27"
pyo3 = { version = "0.25.0", features = ["anyhow"] }
pyo3-log = "0.12.4"
ratatui = { version = "0.29.0", default-features = false, features = ["unstable-rendered-line-info"] }
termion = "4.0.5"

ddbug_parser = { git = "https://github.com/gimli-rs/ddbug.git", rev = "60d4311c48bedb25018150c6752e0a9041e80ab2" }
ansi-to-tui = "7.0.0"
