[package]
name = "embassy_inspect"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
log = "0.4.27"

ratatui = { version = "0.29.0", default-features = false, features = ["unstable-rendered-line-info"] }

ddbug_parser = { git = "https://github.com/gimli-rs/ddbug.git", rev = "60d4311c48bedb25018150c6752e0a9041e80ab2" }
ansi-to-tui = "7.0.0"
