[package]
name = "gdb_backend"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "gdb_backend"
crate-type = ["cdylib"]

[dependencies]
embassy_inspect = { workspace = true }

anyhow = "1.0.98"
log = "0.4.27"

pyo3 = { version = "0.25.0", features = ["anyhow"] }
pyo3-log = "0.12.4"

ratatui = { version = "0.29.0", default-features = false, features = ["unstable-rendered-line-info"] }
termion = "4.0.5"
