[package]
edition = "2024"
name = "nrf52840-no-async"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
defmt = "1.0.1"
defmt-rtt = "1.0.0"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

[profile.release]
debug = 2
